--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
+import aboutMdx from "../pages/about.mdx";
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
+import ProfileSummary from "../components/ProfileSummary.astro";
+import Footer from "../components/Footer.astro";
+import Intro from "../components/Intro.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -9,4 +13,8 @@ import Header from "../components/Header.astro";
 
 <Layout>
   <Header />
+  <ProfileSummary />
+  <Intro />
+  aboutMdxasd
+  <Footer />
 </Layout>
