--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,7 +2,7 @@
 import about from "../pages/astro-test.mdx";
 ---
 
-<main data-layout="index">
+<main>
   <p>
     Software Developer in Test with 6 years of experience working in
     cross-functional teams on web and mobile products, operating at the
